objects/Case.object
<CustomObject>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <businessProcesses>
        <fullName>Success</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In progress by pb security</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for customer approval</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>in progress for pb sales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In progress by pb security</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for customer approval</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
        <values>
            <fullName>in progress for pb sales</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Ops</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Backlog</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Planned</fullName>
        </values>
        <values>
            <fullName>Waiting</fullName>
        </values>
        <values>
            <fullName>Won%E2%80%99t Do</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>LOE__c</fullName>
        <description>Field that summarizes the Effort into High, Medium, and Low</description>
        <formula>IF(
Effort_Minutes__c &lt; 16, &quot;Low&quot;,

IF( 
AND(
Effort_Minutes__c &gt;= 16,
Effort_Minutes__c &lt; 40),&quot;Medium&quot;,

IF( 
Effort_Minutes__c &gt;= 40,&quot;High&quot;,

&quot;Fill in Effort (Hours)&quot;)))</formula>
        <label>LOE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Impacted Team(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Sub_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Sales_Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Won__c</fullName>
        <formula>Opportunity__r.IsWon</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is Opportunity Won?</inlineHelpText>
        <label>Opp Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <description>Field to capture the sub-type of the SOPs request</description>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XDR/AE Territory Update</fullName>
                </value>
                <value>
                    <fullName>XDR or Sales Help</fullName>
                </value>
                <value>
                    <fullName>Project/Space Help</fullName>
                </value>
                <value>
                    <fullName>Sales Credit Request</fullName>
                </value>
                <value>
                    <fullName>Customer Success Help</fullName>
                </value>
                <value>
                    <fullName>SFDC Reporting or Analysis Request</fullName>
                </value>
                <value>
                    <fullName>Deal Help in Salesforce + RevOps</fullName>
                </value>
                <value>
                    <fullName>Deal Help with Paperwork</fullName>
                </value>
                <value>
                    <fullName>Requests from Accounting</fullName>
                </value>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>System Error/Issue</fullName>
                </value>
                <value>
                    <fullName>Licensing and Permissions**</fullName>
                </value>
                <value>
                    <fullName>Role Change</fullName>
                </value>
                <value>
                    <fullName>System Integration</fullName>
                </value>
                <value>
                    <fullName>New Process/Process Change</fullName>
                </value>
                <value>
                    <fullName>Existing Tool or Process Training</fullName>
                </value>
                <value>
                    <fullName>Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opp_Stage__c</fullName>
        <formula>text ( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Opportunity Stage</inlineHelpText>
        <label>Opp Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Makers__c</fullName>
        <label># of Makers</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <inlineHelpText>Opportunity Amount (Lookup)</inlineHelpText>
        <label>Opp Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Won_ARR__c</fullName>
        <formula>Opportunity__r.Won_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Won ARR on Opportunity</inlineHelpText>
        <label>Opp Won ARR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_of_Op__c</fullName>
        <inlineHelpText>Number of makers estimated for the opp</inlineHelpText>
        <label>Scope of Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Churn_Signal__c</fullName>
        <description>Churn Signal Updated from the Zendesk Support Ticket Tag field</description>
        <inlineHelpText>Churn Signal Updated from the Zendesk Support Ticket Tag field</inlineHelpText>
        <label>Churn Signal</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_URL__c</fullName>
        <formula>Opportunity__r.RevOps_Contract_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revops Contract URL</inlineHelpText>
        <label>Contract URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depth_of_Opp__c</fullName>
        <label>Depth of Opp</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Feature specific within a larger product org</fullName>
                </value>
                <value>
                    <fullName>Single product within a larger product org</fullName>
                </value>
                <value>
                    <fullName>Product portfolio w/in a larger product org</fullName>
                </value>
                <value>
                    <fullName>Entire product org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Field to indicate if a request is a tactical/task-like/unplanned request or if it&apos;s more strategic/project-based request.</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-Hoc</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Me__c</fullName>
        <description>Field that returns TRUE if the logged in user is the same as the case requestor. Used in list views to help requesters quickly see the cases they&apos;ve submitted</description>
        <formula>Case_Requester__c =  $User.Id</formula>
        <label>Requester = Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Log__c</fullName>
        <label>Workflow Log</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Employees__c</fullName>
        <formula>Account.Max_Employees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_s__c</fullName>
        <description>Field to capture the various applications the request could be for</description>
        <label>Application(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Sub_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>6sense</fullName>
                </value>
                <value>
                    <fullName>Backoffice</fullName>
                </value>
                <value>
                    <fullName>Clari</fullName>
                </value>
                <value>
                    <fullName>Clearbit</fullName>
                </value>
                <value>
                    <fullName>DocuSign/HelloSign</fullName>
                </value>
                <value>
                    <fullName>Gong</fullName>
                </value>
                <value>
                    <fullName>Intercom</fullName>
                </value>
                <value>
                    <fullName>Ironclad</fullName>
                </value>
                <value>
                    <fullName>LeanData</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Navigator</fullName>
                </value>
                <value>
                    <fullName>LinkedIn Sales Insights</fullName>
                </value>
                <value>
                    <fullName>LeadIQ</fullName>
                </value>
                <value>
                    <fullName>Looker</fullName>
                </value>
                <value>
                    <fullName>Loom</fullName>
                </value>
                <value>
                    <fullName>Madkudu</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Outreach</fullName>
                </value>
                <value>
                    <fullName>Productboard</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>RevOps.io</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Scratchpad</fullName>
                </value>
                <value>
                    <fullName>SetSail</fullName>
                </value>
                <value>
                    <fullName>Tray.io</fullName>
                </value>
                <value>
                    <fullName>Vitally</fullName>
                </value>
                <value>
                    <fullName>Workramp</fullName>
                </value>
                <value>
                    <fullName>ZoomInfo</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_State__c</fullName>
        <label>Current State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LOE_This_Week__c</fullName>
        <description>Field to help SOPs team estimate their workload by owner</description>
        <inlineHelpText>This field should help you estimate your time spent on different asks during a given week and help you not spread yourself too thin. 

What is your estimated level of effort on this request for the week? Enter in hours or fraction of hours.</inlineHelpText>
        <label>LOE This Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Owner__c</fullName>
        <label>Support Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Angelo Aramayo</fullName>
                </value>
                <value>
                    <fullName>Alex Degregori</fullName>
                </value>
                <value>
                    <fullName>Chiara Rizzi</fullName>
                </value>
                <value>
                    <fullName>Kristina Docheva</fullName>
                </value>
                <value>
                    <fullName>Michel Rizzetto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZD_Space_Name__c</fullName>
        <label>ZD Space Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A person who made the request</inlineHelpText>
        <label>Case Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CasesRequested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort_Minutes__c</fullName>
        <label>Effort (Hours)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Team__c</fullName>
        <formula>text(Case_Requester__r.Team__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZD_PB_Space_ID__c</fullName>
        <label>ZD PB Space ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Cycle_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Deal_Cycle_Type__c)</formula>
        <label>Deal Cycle Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Support__c</fullName>
        <label>Type of Support?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Business Case Support</fullName>
                </value>
                <value>
                    <fullName>Value realization</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc Deal Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Industry__c</fullName>
        <formula>Account.Industry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Region__c</fullName>
        <description>Field to capture the Requestor&apos;s Region directly on the case, used to route SOPs cases</description>
        <formula>TEXT( Case_Requester__r.Sales_Region__c )</formula>
        <label>Requester Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZD_Type_of_Query__c</fullName>
        <label>ZD Type of Query</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product question</fullName>
                </value>
                <value>
                    <fullName>Bug/Issue</fullName>
                </value>
                <value>
                    <fullName>Account help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisioning_Type__c</fullName>
        <description>Field to capture the type of transition for provisioning/decommissioning various application licenses</description>
        <label>Provisioning Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onboarding</fullName>
                </value>
                <value>
                    <fullName>Offboarding</fullName>
                </value>
                <value>
                    <fullName>Role Transition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Reviewed__c</fullName>
        <description>Temporary field for reviewing SOPs cases as a teamm</description>
        <inlineHelpText>Once you&apos;ve reviewed the Request Type as Tactical or Strategic, set value to &quot;[Your Initials]&quot; i.e. LL.</inlineHelpText>
        <label>Temp - Confirmed Reviewed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_for_Engagement__c</fullName>
        <label>ETA for Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASAP</fullName>
                </value>
                <value>
                    <fullName>Within 2 weeks</fullName>
                </value>
                <value>
                    <fullName>Greater than 2 weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>Field to categorize the effort put into the SOPs case. Tasks are short, Projects are long and may take several tasks to complete them.</description>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <inlineHelpText>Background information on the type(s) of products that they are looking to build with Productboard.</inlineHelpText>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Project_Plan__c</fullName>
        <description>SOPs field to optionally link to external project plan.</description>
        <label>Link to Project Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Negative_Consequences__c</fullName>
        <label>Negative Consequences</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Backend_Stage__c</fullName>
        <formula>Project__r.Current_Backend_Stage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Backend Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Capabilities__c</fullName>
        <label>Required Capabilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Field to capture various additional information, i.e. new application type, etc.</description>
        <label>Additional Information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Case_Comment__c</fullName>
        <label>Most Recent Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ZD_Ticket_Classification__c</fullName>
        <label>ZD Ticket Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accessibility</fullName>
                </value>
                <value>
                    <fullName>Admin console</fullName>
                </value>
                <value>
                    <fullName>Best Practice::Strategy and Prioritization</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
                <value>
                    <fullName>Collaboration::Comments</fullName>
                </value>
                <value>
                    <fullName>Collaboration::Followers</fullName>
                </value>
                <value>
                    <fullName>Collaboration::Notifications</fullName>
                </value>
                <value>
                    <fullName>Customer Business Context::Companies</fullName>
                </value>
                <value>
                    <fullName>Customer Business Context::Users</fullName>
                </value>
                <value>
                    <fullName>Data recovery</fullName>
                </value>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Developer Portal API</fullName>
                </value>
                <value>
                    <fullName>Editor</fullName>
                </value>
                <value>
                    <fullName>Export::Features</fullName>
                </value>
                <value>
                    <fullName>Export::Notes</fullName>
                </value>
                <value>
                    <fullName>Features::Competitors</fullName>
                </value>
                <value>
                    <fullName>Features::Custom fields</fullName>
                </value>
                <value>
                    <fullName>Features::Drivers &amp; Prioritization score</fullName>
                </value>
                <value>
                    <fullName>Features::Effort</fullName>
                </value>
                <value>
                    <fullName>Features::Filters</fullName>
                </value>
                <value>
                    <fullName>Features::Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Features::Matrix</fullName>
                </value>
                <value>
                    <fullName>Features::Objectives</fullName>
                </value>
                <value>
                    <fullName>Features::Performance</fullName>
                </value>
                <value>
                    <fullName>Features::Product association</fullName>
                </value>
                <value>
                    <fullName>Features::Release groups</fullName>
                </value>
                <value>
                    <fullName>Features::Releases</fullName>
                </value>
                <value>
                    <fullName>Features::Search</fullName>
                </value>
                <value>
                    <fullName>Features::Segments</fullName>
                </value>
                <value>
                    <fullName>Features::Sidebar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Resolution_Date__c</fullName>
        <description>Field to capture the date the requestor needs the request done by. This date entry does not guarantee that the ticket will be completed by then but helps us prioritize.</description>
        <label>Requested Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_type_of_call_is_this__c</fullName>
        <label>What type of call is this?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo/Deep Dive Demo</fullName>
                </value>
                <value>
                    <fullName>Working Session</fullName>
                </value>
                <value>
                    <fullName>Technical Discovery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_ID__c</fullName>
        <description>ID of the Zendesk Support Ticket synced to Salesforce as Case, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>ID of the Zendesk Support Ticket synced to Salesforce as Case</inlineHelpText>
        <label>Zendesk Support Ticket ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_Business_Outcomes__c</fullName>
        <label>Positive Business Outcomes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_URL__c</fullName>
        <description>Zendesk Support Ticket&apos;s URL, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Zendesk Support Ticket&apos;s URL</inlineHelpText>
        <label>Zendesk Support Ticket URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Who_is_the_Customer_Contact__c</fullName>
        <label>Who is the Customer Contact?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Tags__c</fullName>
        <description>Zendesk Support Ticket&apos;s Tag, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Zendesk Support Ticket&apos;s Tags</inlineHelpText>
        <label>Zendesk Support Ticket Tag</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Has_SatisMeter_ProductLineItem__c</fullName>
        <description>Field that returns TRUE/FALSE if Opp has SatisMeter. Used in email template to Support for provisioning.</description>
        <formula>IF(
NOT(ISBLANK( Opportunity__c )),
 Opportunity__r.Has_SatisMeter_ProductLineItem__c ,FALSE)</formula>
        <label>Has SatisMeter ProductLineItem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Form_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s Ticket Form, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s Ticket Form</inlineHelpText>
        <label>Zendesk Support Ticket Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Solved_At__c</fullName>
        <description>Time when the Zendesk Support Ticket Solved At, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Time when the Zendesk Support Ticket Solved At</inlineHelpText>
        <label>Zendesk Support Ticket Solved At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>After_Scenario_Future_Ideal_State__c</fullName>
        <label>After Scenario (Future Ideal State)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Share_some_context_behind_the_ask__c</fullName>
        <label>Share some context behind the ask?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Brand_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s Brand, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s Brand</inlineHelpText>
        <label>Zendesk Support Ticket Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Created_At__c</fullName>
        <description>Creation Time of the Zendesk Support Ticket, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Creation Time of the Zendesk Support Ticket</inlineHelpText>
        <label>Zendesk Support Ticket Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Group_Name__c</fullName>
        <description>Name of the Zendesk Support Ticket&apos;s Group, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Name of the Zendesk Support Ticket&apos;s Group</inlineHelpText>
        <label>Zendesk Support Ticket Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zendesk_Support_Ticket_Updated_At__c</fullName>
        <description>Update Time of the Zendesk Support Ticket, this field was automatically created by Zendesk Integration for Salesforce. PLEASE DO NOT DELETE OR MODIFY THIS FIELD if you are using Zendesk Ticket Sync feature.</description>
        <inlineHelpText>Update Time of the Zendesk Support Ticket</inlineHelpText>
        <label>Zendesk Support Ticket Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>How_does_CS_help_move_this_forward__c</fullName>
        <label>How does CS help move this forward?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Notes_for_Sales_Engineer__c</fullName>
        <label>Additional Notes for Sales Engineer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>